src/ui/modules/core/components/scrollTop/scroll-top.css
.scroll-top-wrapper {
	--hidden-offset: calc(100% + 2rem);
	inset: auto 2rem 3rem auto;
	position: fixed;
	transition:
		translate 0.4s var(--ease-elastic),
		scale 0.2s;
	translate: var(--hidden-offset) 0;
	z-index: 100;

	&:hover {
		scale: 1.05;
	}

	@media (width <= 575px) {
		--hidden-offset: calc(100% + 1rem);
		inset: auto 1rem 1rem auto;
	}
}

@container scroll-state(scrollable: top) {
	.scroll-top-wrapper {
		translate: 0 0;
	}
}

.scroll-top {
	background: var(--primary-light-2);
	box-shadow: 0.125rem 0.125rem 0.175rem var(--neutral-light-2);
	height: fit-content;
	transition: all 0.2s;
	width: fit-content;

	svg {
		--color: light-dark(inherit, var(--white));
		color: var(--color);
		fill: var(--color);
		height: 3rem;
		padding: 0.5rem;
		rotate: 0.25turn;
		width: 3rem;
	}
}

